test_regress/t/t_genvar_misuse_bad.out
%Error: t/t_genvar_misuse_bad.v:15:19: Genvar 'i' used outside generate for loop (IEEE 1800-2023 27.4)
   15 |   assign q[i] = d[i];   
      |                   ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_genvar_misuse_bad.v:15:12: Genvar 'i' used outside generate for loop (IEEE 1800-2023 27.4)
   15 |   assign q[i] = d[i];   
      |            ^
%Error: t/t_genvar_misuse_bad.v:22:11: Genvar 'c' used outside generate for loop (IEEE 1800-2023 27.4)
   22 |       if (c);   
      |           ^
%Error: Exiting due to
